--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
 			<h3>Postdoctoral Researchers</h3>
 			<ul>
 			<li>Miguel Won, <i>Analysing Political Discourse Through Text Mining Methods</i>, INESC-ID (<i>co-supervised with Prof. Pedro Magalhães</i>)</li>
-			<!-- <li>Gil Rocha, <i></i>, INESC-ID </li> -->
+			<li>Gil Rocha, <i>Argumentation and Debate in Support of Critical Thinking with LLMs</i>, INESC-ID </li>
 			</ul>
 			<h3>PhD Students</h3>
 			<ul>
@@ -621,13 +621,15 @@
 			<li>Rita Ramos, <i>Deep Learning Methods Bridging Language and Vision</i>, IST/KU.DK (<i>ongoing co-supervision with Prof. Desmond Elliott</i>)</li>
 			<!-- <li>André Neves, <i>Deep Learning for Remote Sensing Applications</i>, FCT-UNL (<i>ongoing co-supervision with Prof. João Moura Pires and Prof. Carlos Damásio</i>)</li> -->			
 			<!-- <li>Gonçalo Raposo, <i>Conversational Search</i>, IST (<i>ongoing co-supervision with Prof. Luísa Coheur</i>)</li> -->
-			<li>Isabel Coutinho, <i>Clinical Text Mining</i>, IST (<i>ongoing</i>)</li>
-			<li>João Coelho, <i>Neural Information Retrieval for Long Documents</i>, IST/CMU-PT (<i>ongoing co-supervision with Prof. Jamie Callan and Prof. João Magalhães</i>)</li>
+			<li>Isabel Coutinho, <i>Clinical Text Mining</i>, IST (<i>ongoing co-supervision with Dr. Gonçalo Correia</i>)</li>
+			<li>João Coelho, <i>Neural Information Retrieval for Long Documents</i>, IST/CMU-PT (<i>ongoing co-supervision with Prof. Chenyan Xiong and Prof. João Magalhães</i>)</li>
 			<li>João Silva, <i>Vision and Language Models for Remote Sensing Data</i>, IST (<i>ongoing co-supervision with Prof. Devis Tuia and Prof. João Magalhães</i>)</li>
-			<li>Artur Guimarães, <i>Information Retrieval over Clinical Documents</i>, IST (<i>ongoing co-supervision with Prof. João Magalhães</i>)</li>				
+			<li>Artur Guimarães, <i>Information Retrieval over Clinical Documents</i>, IST (<i>ongoing co-supervision with Prof. João Magalhães</i>)</li>
 			<li>Gonçalo Gomes, <i>Quality Assessment for Vision-and-Language Encoder Models</i>, IST (<i>ongoing co-supervision with Prof. Chrysoula Zerva</i>)</li>
-			<li>Helder Dias, <i>Vision and language LLMs for document form understanding</i>, IST (<i>ongoing co-supervision with Prof. Arlindo Oliveira</i>)</li>			
+			<li>Helder Dias, <i>Vision and language LLMs for document form understanding</i>, IST (<i>ongoing co-supervision with Prof. Arlindo Oliveira</i>)</li>
 			<li>Piotr Gramacki, <i>Geospatial Language Models</i>, IST (<i>ongoing co-supervision with Prof. Piotr Szymański</i>)</li>
+			<!-- <li>Daniel Chechelnitsky , <i>Cultural-aware vision and language models</i>, IST (<i>ongoing co-supervision with Prof. Maarten Sap</i>)</li> -->				
+			<!-- <li>Francisco Guedes , <i>Knowledge Repreentation Across Humans and Machines</i>, IST (<i>ongoing co-supervision with Prof. Arlindo Oliveira</i>)</li> -->				
 			</ul>
 			<h3>MSc Students</h3>
 			<ul>
@@ -802,8 +804,8 @@
 			<li>Nuno Machado, <a href=""><i>Optimizing Prompts for Large Language Models Using Evolutionary Algorithms</i></a>, IST, 2024 (<i>co-supervised with Prof. Joao Paulo Carvalho</i>)</li> <!-- ?? valores -->
 
 			<li>Francisco Nogueira, <a href=""><i>Comprehension of Multilingual Expressions Referring to Target Objects in Visual Inputs</i></a>, IST, 2025 (<i>co-supervised with Prof. Alexandre Bernardino</i>)</li> <!-- ?? valores -->
-			<!-- <li>Luís Lopes, <a href=""><i>Vision-and-Language Expert Models for 360-Degree Imagery</i></a>, IST, 2025</li> --> <!-- ?? valores -->			
-			<!-- <li>João Cardoso, <a href=""><i>Training-Free Multilingual Image Captioning</i></a>, IST, 2025 (<i>co-supervised with Dr. Gil Rocha</i>)</li> --> <!-- ?? valores -->
+			<li>Luís Lopes, <a href=""><i>Open-Vocabulary Semantic Segmentation of Aerial Photos</i></a>, IST, 2025</li> <!-- ?? valores -->
+			<li>João Cardoso, <a href=""><i>Characterization of the Internal Representations of Multi-Modal Large Language Models</i></a>, IST, 2025 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- ?? valores -->
 			</ul>
 		</td>
     </tr>
