--- a/index.html
+++ b/index.html
@@ -784,10 +784,10 @@
 
 			<li>Diogo Silva, <a href=""><i>Dialogue Summarization with Retrieval-Augmented Transformers</i></a>, IST, 2024 (<i>co-supervised with Prof. Luísa Coheur</i>)</li> <!-- 13 valores -->
 			<li>Manuel Miranda, <a href=""><i>Finding Bounding Boxes for Visual Answers to Natural Language Questions</i></a>, IST, 2024</li> <!-- 15 valores -->			
-			<li>Miguel Carvalho, <a href=""><i>Conversational Question Answering on Visual Contents</i></a>, IST, 2024 (<i>co-supervised with Prof. João Magalhães</i>)</li> <!-- 19 valores -->			
+			<li>Miguel Carvalho, <a href=""><i>Efficient Architectures for High Resolution Vision-Language Models</i></a>, IST, 2024 (<i>co-supervised with Prof. João Magalhães</i>)</li> <!-- 19 valores -->			
 			<li>Gonçalo Marques, <a href=""><i>Efficient Neural Information Retrieval Methods</i></a>, IST, 2024 (<i>co-supervised with Dra. Mariana Almeida</i>)</li> <!-- 13 valores -->
 			<li>Vasco Rocha, <a href=""><i>Improving Differentiable Neural Architecture Search</i></a>, IST, 2024 (<i>co-supervised with Prof. Paolo Romano</i>)</li> <!-- 14 valores -->
-			<li>João Silva, <a href=""><i>Generating Multilingual Captions for Images and Videos With Transformer Neural Models</i></a>, IST, 2024 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- 19 valores -->
+			<li>João Silva, <a href=""><i>Retrieval-Augmented Text-Only Training for Image Captioning</i></a>, IST, 2024 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- 19 valores -->
 
 			<li>Catarina Valério, <a href=""><i>Using Large Language Models to Summarize Patient-Physician Dialogues into Medical Notes</i></a>, IST, 2024 (<i>co-supervised with Dr. Gonçalo Correia</i>)</li> <!-- ?? valores -->
 			<li>Inês Mota, <a href=""><i>Using Large Language Models to Compose Discharge Summaries from Clinical Notes</i></a>, IST, 2024 (<i>co-supervised with Dr. Gonçalo Correia</i>)</li> <!-- ?? valores -->
