--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@
 			<li>Francisco Nogueira, <a href=""><i>Comprehension of Multilingual Expressions Referring to Target Objects in Visual Inputs</i></a>, IST, 2025 (<i>co-supervised with Prof. Alexandre Bernardino</i>)</li> <!-- ?? valores -->
 			<li>Luís Lopes, <a href=""><i>Open-Vocabulary Semantic Segmentation of Aerial Photos</i></a>, IST, 2025</li> <!-- ?? valores -->
 			<li>João Cardoso, <a href=""><i>Characterization of the Internal Representations of Multi-Modal Large Language Models</i></a>, IST, 2025 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- ?? valores -->
-			<!-- <li>Rui Alves da Fonseca, <a href=""><i>Training-Free Multilingual Image Captioning</i></a>, IST, 2025 (<i>co-supervised with Dr. Gil Rocha</i>)</li> --> <!-- ?? valores -->			
+			<li>Rui Alves da Fonseca, <a href=""><i>Training-Free Multilingual Image Captioning</i></a>, IST, 2025 (<i>co-supervised with Dr. Gil Rocha</i>)</li> <!-- ?? valores -->			
 			</ul>
 		</td>
     </tr>
