--- a/index.html
+++ b/index.html
@@ -803,9 +803,10 @@
 			<li>Manuel Palo, <a href=""><i>Translating sign language into text with large language models</i></a>, IST, 2024 (<i>co-supervised with Prof. Luísa Coheur</i>)</li> <!-- ?? valores -->
 				
 			<li>Francisco Nogueira, <a href=""><i>Comprehension of Multilingual Expressions Referring to Target Objects in Visual Inputs</i></a>, IST, 2025 (<i>co-supervised with Prof. Alexandre Bernardino</i>)</li> <!-- ?? valores -->
-			<li>Luís Lopes, <a href=""><i>Open-Vocabulary Semantic Segmentation of Aerial Photos</i></a>, IST, 2025</li> <!-- ?? valores -->
+			<li>Luís Lopes, <a href=""><i>Open-Vocabulary Semantic Segmentation of Aerial Photos</i></a>, IST, 2025 (<i>co-supervised with Prof. Alexandre Bernardino</i>)</li> <!-- ?? valores -->
 			<li>João Cardoso, <a href=""><i>Characterization of the Internal Representations of Multi-Modal Large Language Models</i></a>, IST, 2025 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- ?? valores -->
-			<li>Rui Alves da Fonseca, <a href=""><i>Training-Free Multilingual Image Captioning</i></a>, IST, 2025 (<i>co-supervised with Dr. Gil Rocha</i>)</li> <!-- ?? valores -->			
+			<li>Rui Alves da Fonseca, <a href=""><i>Training-Free Multilingual Image Captioning</i></a>, IST, 2025 (<i>co-supervised with Dr. Gil Rocha</i>)</li> <!-- ?? valores -->
+			<li>Pedro Claro, <a href=""><i>Vision-and-Language Expert Models for 360-Degree Imagery</i></a>, IST, 2025 <!-- ?? valores -->				
 			</ul>
 		</td>
     </tr>
