--- a/index.html
+++ b/index.html
@@ -874,6 +874,7 @@
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://conll.org">CoNLL'24</a> |
 						<a href="https://epia2024.pt">EPIA'24</a> |						
 						<a href="https://sigspatial2024.sigspatial.org">SIGSPATIAL'24</a> |						
 						<a href="https://www.ictir2024.org">ICTIR'24</a> |
@@ -1177,6 +1178,7 @@
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
+						<a href="MECD-ALIPIO">Alexandre Ferreira</a> | 
 						<a href="MEEC-JARDIM-NUNES">Rudolfo Félix</a> | 
 						<a href="MEEC-ARLINDO">Pedro Henriques</a> |
 						<a href="FCUL-CATIA">Natércia Soeiro</a> |						
