--- a/index.html
+++ b/index.html
@@ -789,7 +789,8 @@
 			<li>Gonçalo Marques, <a href=""><i>Efficient Neural Information Retrieval Methods</i></a>, IST, 2024 (<i>co-supervised with Dra. Mariana Almeida</i>)</li> <!-- 17 valores -->
 			<li>Vasco Rocha, <a href=""><i>Improving Differentiable Neural Architecture Search</i></a>, IST, 2024 (<i>co-supervised with Prof. Paolo Romano</i>)</li> <!-- 17 valores -->
 			<li>João Silva, <a href=""><i>Retrieval-Augmented Text-Only Training for Image Captioning</i></a>, IST, 2024 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- 19 valores -->
-
+			<li>Kaiwei Chen, <a href=""><i>What Makes Multimodal Chain-of-Thought Matter in Complex Multimodal Reasoning Tasks?</i></a>, Utrecht University, 2024</li> <!-- 7.5 valores -->
+				
 			<li>Catarina Valério, <a href=""><i>Using Large Language Models to Summarize Patient-Physician Dialogues into Medical Notes</i></a>, IST, 2024 (<i>co-supervised with Dr. Gonçalo Correia</i>)</li> <!-- ?? valores -->
 			<li>Inês Mota, <a href=""><i>Using Large Language Models to Compose Discharge Summaries from Clinical Notes</i></a>, IST, 2024 (<i>co-supervised with Dr. Gonçalo Correia</i>)</li> <!-- ?? valores -->
 			<li>Leonor Barreiros, <a href=""><i>Semi-Supervised Medical Entity Linking</i></a>, IST, 2024 (<i>co-supervised with Dr. Gonçalo Correia</i>)</li> <!-- ?? valores -->			
