--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
 			<li>Gonçalo Gomes, <i>Quality Assessment for Vision-and-Language Encoder Models</i>, IST (<i>ongoing co-supervision with Prof. Chrysoula Zerva</i>)</li>
 			<li>Helder Dias, <i>Vision and language LLMs for document form understanding</i>, IST (<i>ongoing co-supervision with Prof. Arlindo Oliveira</i>)</li>
 			<li>Piotr Gramacki, <i>Geospatial Language Models</i>, IST (<i>ongoing co-supervision with Prof. Piotr Szymański</i>)</li>
-			<li>Francisco Guedes, <i>Knowledge Repreentation Across Humans and Machines</i>, IST (<i>ongoing co-supervision with Prof. Arlindo Oliveira and Prof. Leila Wehbe</i>)</li>
+			<li>Francisco Guedes, <i>Knowledge Representation Across Humans and Machines</i>, IST (<i>ongoing co-supervision with Prof. Arlindo Oliveira and Prof. Leila Wehbe</i>)</li>
 			</ul>
 			<h3>MSc Students</h3>
 			<ul>
