--- a/index.html
+++ b/index.html
@@ -874,6 +874,8 @@
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://coling2025.org">COLING'25</a> |						
+						<a href="https://ecir2025.eu/">ECIR'25</a> |
 						<a href="https://conll.org">CoNLL'24</a> |
 						<a href="https://epia2024.pt">EPIA'24</a> |						
 						<a href="https://sigspatial2024.sigspatial.org">SIGSPATIAL'24</a> |						
@@ -895,7 +897,7 @@
 						<a href="https://lrec-coling-2024.org">LREC-COLING'24</a> |						
 						<a href="https://aamas2023.soton.ac.uk">AAMAS'24</a> |
 						<a href="http://www.sigapp.org/sac/sac2024/">SAC'24</a> |
-						<a href="https://ecir2024.org">ECIR'24</a> |						
+						<a href="https://ecir2024.org">ECIR'24</a> |
 						<a href="https://aaai.org/aaai-conference/">AAAI'24</a> |						
 						<a href="https://www.wsdm-conference.org/2024/">WSDM'24</a> |						
 						<a href="https://propor2024.citius.gal">PROPOR'24</a> |
