--- a/index.html
+++ b/index.html
@@ -1079,7 +1079,8 @@
 					<td>
 					<ul><li>
 						<strong>Reviewer in international journals: </strong>
-						<a href="https://dl.acm.org/journal/tomm">Transactions on Multimedia Computing Communications and Applications</a> |						
+						<a href="https://transacl.org/">Transactions of the Association for Computational Linguistics</a> |
+						<a href="https://dl.acm.org/journal/tomm">Transactions on Multimedia Computing Communications and Applications</a> |
 						<a href="https://www.sciencedirect.com/journal/artificial-intelligence-in-medicine">Artificial Intelligence in Medicine</a> |
 						<a href="https://www.sciencedirect.com/journal/informatics-in-medicine-unlocked">Informatics in Medicine Unlocked</a> |						
 						<a href="https://ieeeaccess.ieee.org">IEEE Access</a> |
