--- a/index.html
+++ b/index.html
@@ -875,7 +875,8 @@
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
-						<a href="https://coling2025.org">COLING'25</a> |						
+						<a href="http://www.sigapp.org/sac/sac2025/">SAC'25</a> |
+						<a href="https://coling2025.org">COLING'25</a> |
 						<a href="https://ecir2025.eu/">ECIR'25</a> |
 						<a href="https://conll.org">CoNLL'24</a> |
 						<a href="https://epia2024.pt">EPIA'24</a> |						
