--- a/index.html
+++ b/index.html
@@ -823,6 +823,7 @@
 					<td>
 					<ul><li>
 						<strong>Member of organization committees: </strong>
+						<a href="https://geoai.ornl.gov/acmsigspatial-geoai/">GeoAI'24</a> |
 						<a href="http://lxmls.it.pt/">LxMLS'24</a> |
 						<a href="https://sigspatial2023.sigspatial.org">SIGSPATIAL'23</a>
 						<a href="https://ludovicmoncla.github.io/sigspatial-geohumanities-2023/">SIGSPATIAL GeoHumanities'23</a> |
@@ -878,6 +879,7 @@
 						<a href="http://www.sigapp.org/sac/sac2025/">SAC'25</a> |
 						<a href="https://coling2025.org">COLING'25</a> |
 						<a href="https://ecir2025.eu/">ECIR'25</a> |
+						<a href="https://www3.cs.stonybrook.edu/~ieeebigdata2024/">IEEE BigData'24</a> |
 						<a href="https://conll.org">CoNLL'24</a> |
 						<a href="https://epia2024.pt">EPIA'24</a> |						
 						<a href="https://sigspatial2024.sigspatial.org">SIGSPATIAL'24</a> |						
