--- a/index.html
+++ b/index.html
@@ -371,6 +371,7 @@
 			<h3>Conference and Workshop Papers</h3>
 
 			<ul>
+<li>Piotr Gramacki, Bruno Martins, and Piotr Szymański, <i>Evaluation of Code LLMs on Geo-Spatial Code Generation</i>, Proceedings of the International ACM SIGSPATIAL Workshop on AI for Geographic Knowledge Discovery, 2024 [<a href="">PDF</a>]</li>
 <li>João Daniel Silva, João Magalhães, Devis Tuia, and Bruno Martins, <i>Multilingual Vision-Language Pre-training for the Remote Sensing Domain</i>, Proceedings of the ACM SIGSPATIAL International Conference on Advances in Geographic Information Systems, 2024 [<a href="">PDF</a>]</li>				
 <li>João Coelho, Bruno Martins, Joao Magalhães, Jamie Callan, and Chenyan Xiong, <i>Dwell in the Beginning: How Language Models Embed Long Documents for Dense Retrieval</i>, Proceedings of the Annual Meeting of the Association for Computational Linguistics, 2024 [<a href="https://arxiv.org/abs/2404.04163">PDF</a>]</li>
 <li>Artur Guimarães, Bruno Martins, and João Magalhães, <i>Lisbon Computational Linguists at SemEval-2024 Task 2: Using A Mistral-7B Model and Data Augmentation</i>, Proceedings of the International Workshop on Semantic Evaluation, 2024 [<a href="https://arxiv.org/abs/2408.03127">PDF</a>]</li>
