--- a/index.html
+++ b/index.html
@@ -1138,13 +1138,13 @@
 					<td>
 					<ul><li>						
 						<strong>Ph.D. evaluation comittees: </strong>
+						<a href="https://www.linkedin.com/in/richard-jonker-8736131b9">Richard Jonker</a> |
 						<a href="http://web.tecnico.ulisboa.pt/soraiafpaulo/">Soraia Paulo</a> |
 						<a href="https://www.cienciavitae.pt/261E-CB39-416C">John Mendonça</a> |
 						<a href="https://web.ist.utl.pt/maria.casimiro/">Maria Casimiro</a> |						
 						<a href="https://nunonmg.github.io/">Nuno Guerreiro</a> |
 						<a href="https://orcid.org/0000-0002-0362-6100">Herbert Pinto</a> |
 						<a href="https://www.linkedin.com/in/afonso-salgado-sousa/?originalSubdomain=pt">Afonso Sousa</a> |
-						
 						<a href="https://www.linkedin.com/in/fernandoblalves/">Fernando Alves</a> |
 						<a href="https://www.linkedin.com/in/syed-mehtab-alam-b4564a30/">Mehtab Alam Syed</a> |
 						<a href="https://scholar.google.com/citations?user=dEdhfOQAAAAJ">Daniel Garcia-Gonzalez</a> |
@@ -1184,6 +1184,8 @@
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
+						<a href="NOVA-ANDRE">André Lamurias</a> |
+						
 						<a href="MECD-ALIPIO">Alexandre Ferreira</a> | 
 						<a href="MEEC-JARDIM-NUNES">Rudolfo Félix</a> | 
 						<a href="MEEC-ARLINDO">Pedro Henriques</a> |
