--- a/index.html
+++ b/index.html
@@ -877,6 +877,7 @@
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://agile-online.org/conference-2025">AGILE'25</a> |
 						<a href="http://www.sigapp.org/sac/sac2025/">SAC'25</a> |
 						<a href="https://coling2025.org">COLING'25</a> |
 						<a href="https://ecir2025.eu/">ECIR'25</a> |
