--- a/index.html
+++ b/index.html
@@ -876,7 +876,10 @@
 				<tr>
 					<td>
 					<ul><li>
-						<strong>Member of programe committees and reviewer: </strong>
+						<strong>Member of programe committees and reviewer: </strong>						
+						<a href="https://dhnb.eu/conferences/dhnb2025/">DHNB'25</a> |						
+						<a href="https://geo-ext.github.io/GeoExT2025/">GeoExT'25</a> |
+						<a href="https://text2story25.inesctec.pt">Text2Story'25</a> |						
 						<a href="https://agile-online.org/conference-2025">AGILE'25</a> |
 						<a href="http://www.sigapp.org/sac/sac2025/">SAC'25</a> |
 						<a href="https://coling2025.org">COLING'25</a> |
@@ -896,6 +899,7 @@
 						<a href="http://sdss2024.spatial-data-science.net">SDSS'24</a> |
 						<a href="https://agile-online.org/conference-2024">AGILE'24</a> |
 						<a href="https://sigir.org/sigir2024/">SIGIR'24</a> |
+						<a href="https://geo-ext.github.io/GeoExT2024/">GeoExT'24</a> |
 						<a href="https://text2story24.inesctec.pt">Text2Story'24</a> (Recognized Reviewer Award)|
 						<a href="https://2024.naacl.org">NAACL'24</a> |	
 						<a href="https://2024.eacl.org">EACL'24</a> |							
@@ -919,7 +923,7 @@
 						<a href="https://giscience2023.github.io">GIScience'23</a> |
 						<a href="https://agile-online.org/conference-2023">AGILE'23</a> |
 						<a href="https://sites.google.com/view/socialnlp2023/">SocialNLP'23</a> |
-						<a href="https://geo-ext.github.io">GeoExT'23</a> |
+						<a href="https://geo-ext.github.io/GeoExT2023/">GeoExT'23</a> |
 						<a href="https://en.sce.ac.il/news/iact23">IACT’23</a> |
 						<a href="https://www.nodalida2023.fo">NoDaLiDa'23</a> |
 						<a href="https://ds2023.inesctec.pt/">DS'23</a> |
