--- a/index.html
+++ b/index.html
@@ -785,23 +785,24 @@
 			<li>Gonçalo Marques, <a href="https://fenix.tecnico.ulisboa.pt/cursos/mecd/dissertacao/2535628432474253"><i>Enhancing Information Retrieval Models through Click and Synthetic Data</i></a>, IST, 2024 (<i>co-supervised with Dra. Mariana Almeida</i>)</li> <!-- 17 valores -->
 			<li>Vasco Rocha, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-a/dissertacao/283828618791088"><i>Discretization Aware Differentiable ARchiTecture Search</i></a>, IST, 2024 (<i>co-supervised with Prof. Paolo Romano</i>)</li> <!-- 17 valores -->
 			<li>João Silva, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-a/dissertacao/283828618791102"><i>Retrieval-Augmented Text-Only Training for Image Captioning</i></a>, IST, 2024 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- 19 valores -->
-			
+			<li>Kaiwei Chen, <a href=""><i>What Makes Multimodal Chain-of-Thought Matter in Complex Multimodal Reasoning Tasks?</i></a>, Utrecht University, 2024</li> <!-- 7.5 valores -->
+				
 			<!-- <li>Dora Lourenço, <a href=""><i>Explainable AI for Anti-Money Laundering</i></a>, IST, 2022 (<i>co-supervised with Dr. Pedro Saleiro</i>)</li> -->
 			<!-- <li>Duarte Miranda, <a href=""><i>Neural Retrieval Models for the Portuguese Language</i></a>, IST, 2022 (<i>co-supervised with Dra. Mariana Almeida</i>)</li> --> <!-- ?? valores -->
 			<!-- <li>Eduardo Ladeiras, <a href=""><i>Visually Grounded Speech Recognition </i></a>, IST, 2024</li> -->				
 			
-			<li>Kaiwei Chen, <a href=""><i>What Makes Multimodal Chain-of-Thought Matter in Complex Multimodal Reasoning Tasks?</i></a>, Utrecht University, 2024</li> <!-- 7.5 valores -->
+			<li>Leonor Barreiros, <a href=""><i>Semi-Supervised Medical Entity Linking</i></a>, IST, 2024 (<i>co-supervised with Dr. Gonçalo Correia</i>)</li> <!-- 19 valores -->			
 				
-			<li>Catarina Valério, <a href=""><i>Using Large Language Models to Summarize Patient-Physician Dialogues into Medical Notes</i></a>, IST, 2024 (<i>co-supervised with Dr. Gonçalo Correia</i>)</li> <!-- ?? valores -->
-			<li>Inês Mota, <a href=""><i>Using Large Language Models to Compose Discharge Summaries from Clinical Notes</i></a>, IST, 2024 (<i>co-supervised with Dr. Gonçalo Correia</i>)</li> <!-- ?? valores -->
-			<li>Leonor Barreiros, <a href=""><i>Semi-Supervised Medical Entity Linking</i></a>, IST, 2024 (<i>co-supervised with Dr. Gonçalo Correia</i>)</li> <!-- ?? valores -->			
-			<li>Diogo Branco, <a href=""><i>Adapting large language models for the domain of clinical trials</i></a>, IST, 2024 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- ?? valores -->
+			<li>Catarina Valério, <a href=""><i>Using Large Language Models to Summarize Patient-Physician Dialogues into Medical Notes</i></a>, IST, 2024 (<i>co-supervised with Dr. Gonçalo Correia</i>)</li> <!-- 19 valores -->
+			<li>Inês Mota, <a href=""><i>Using Large Language Models to Compose Discharge Summaries from Clinical Notes</i></a>, IST, 2024 (<i>co-supervised with Dr. Gonçalo Correia</i>)</li> <!-- 18 valores -->
+			<li>Diogo Branco, <a href=""><i>Adapting large language models for the domain of clinical trials</i></a>, IST, 2024 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- 14 valores -->
+			<li>Guilherme Lopes, <a href=""><i>Efficient training of vision and language encoder models</i></a>, IST, 2024 (<i>co-supervised with Prof. Conceição Amado</i>)</li> <!-- 18 valores -->
+			<li>Afonso Certo, <a href=""><i>End-to-End Robot Task Planning from Voice Commands</i></a>, IST, 2024 (<i>co-supervised with Dr. Carlos Azevedo and Prof. Pedro U. Lima</i>)</li> <!-- 18 valores -->				
+			<li>Tiago Miranda, <a href=""><i>Using embeddings to infer diagnostics from medical prescriptions</i></a>, IST, 2024 (<i>co-supervised with Dra. Lilia Perfeito</i>)</li> <!-- 18 valores -->
+			<li>Nuno Machado, <a href=""><i>Optimizing Prompts for Large Language Models Using Evolutionary Algorithms</i></a>, IST, 2024 (<i>co-supervised with Prof. Joao Paulo Carvalho</i>)</li> <!-- 18 valores -->
+
 			<li>André Alves, <a href=""><i>Assessing the Uncertainty of Large Language Models</i></a>, IST, 2024 (<i>co-supervised with Dr. José Vieira</i>)</li> <!-- ?? valores -->
 			<li>João Nabais, <a href=""><i>Adapting large language models for the domain of clinical trials</i></a>, IST, 2024 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- ?? valores -->
-			<li>Guilherme Lopes, <a href=""><i>Efficient training of vision and language encoder models</i></a>, IST, 2024 (<i>co-supervised with Prof. Conceição Amado</i>)</li> <!-- ?? valores -->
-			<li>Afonso Certo, <a href=""><i>End-to-End Robot Task Planning from Voice Commands</i></a>, IST, 2024 (<i>co-supervised with Dr. Carlos Azevedo and Prof. Pedro U. Lima</i>)</li> <!-- ?? valores -->				
-			<li>Tiago Miranda, <a href=""><i>Using embeddings to infer diagnostics from medical prescriptions</i></a>, IST, 2024 (<i>co-supervised with Dra. Lilia Perfeito</i>)</li> <!-- ?? valores -->
-			<li>Nuno Machado, <a href=""><i>Optimizing Prompts for Large Language Models Using Evolutionary Algorithms</i></a>, IST, 2024 (<i>co-supervised with Prof. Joao Paulo Carvalho</i>)</li> <!-- ?? valores -->
 
 			<li>Manuel Palo, <a href=""><i>Translating sign language into text with large language models</i></a>, IST, 2025 (<i>co-supervised with Prof. Luísa Coheur</i>)</li> <!-- ?? valores -->
 			<li>Francisco Nogueira, <a href=""><i>Comprehension of Multilingual Expressions Referring to Target Objects in Visual Inputs</i></a>, IST, 2025 (<i>co-supervised with Prof. Alexandre Bernardino</i>)</li> <!-- ?? valores -->
