--- a/index.html
+++ b/index.html
@@ -1189,7 +1189,10 @@
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
-						<a href="NOVA-ANDRE">André Lamurias</a> |
+						<a href="MEEC-DAVID">João Gomes</a> |
+						<a href="MEEC-VASCONCELOS">João Nunes</a> |
+						<a href="MEIC-SOFIA">Diogo Ravasco</a> |
+						<a href="NOVA-ANDRE">Rodrigo Gonçalves</a> |
 						
 						<a href="MECD-ALIPIO">Alexandre Ferreira</a> | 
 						<a href="MEEC-JARDIM-NUNES">Rudolfo Félix</a> | 
