--- a/index.html
+++ b/index.html
@@ -791,9 +791,9 @@
 			<!-- <li>Duarte Miranda, <a href=""><i>Neural Retrieval Models for the Portuguese Language</i></a>, IST, 2022 (<i>co-supervised with Dra. Mariana Almeida</i>)</li> --> <!-- ?? valores -->
 			<!-- <li>Eduardo Ladeiras, <a href=""><i>Visually Grounded Speech Recognition </i></a>, IST, 2024</li> -->				
 			
-			<li>Leonor Barreiros, <a href=""><i>Semi-Supervised Medical Entity Linking</i></a>, IST, 2024 (<i>co-supervised with Dr. Gonçalo Correia</i>)</li> <!-- 19 valores -->			
+			<li>Leonor Barreiros, <a href=""><i>Semi-Supervised Medical Entity Linking</i></a>, IST, 2024 (<i>co-supervised with Dr. Gonçalo Correia</i>)</li> <!-- 19 valores -->
 			<li>Diogo Branco, <a href=""><i>Adapting large language models for the domain of clinical trials</i></a>, IST, 2024 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- 17 valores -->
-			<li>Catarina Valério, <a href=""><i>Using Large Language Models to Summarize Patient-Physician Dialogues into Medical Notes</i></a>, IST, 2024 (<i>co-supervised with Dr. Gonçalo Correia</i>)</li> <!-- 19 valores -->				
+			<li>Catarina Valério, <a href=""><i>Using Large Language Models to Summarize Patient-Physician Dialogues into Medical Notes</i></a>, IST, 2024 (<i>co-supervised with Dr. Gonçalo Correia</i>)</li> <!-- 19 valores -->
 			<li>Guilherme Lopes, <a href=""><i>Efficient training of vision and language encoder models</i></a>, IST, 2024 (<i>co-supervised with Prof. Conceição Amado</i>)</li> <!-- 18 valores -->
 			<li>Afonso Certo, <a href=""><i>End-to-End Robot Task Planning from Voice Commands</i></a>, IST, 2024 (<i>co-supervised with Dr. Carlos Azevedo and Prof. Pedro U. Lima</i>)</li> <!-- 18 valores -->				
 			<li>Tiago Miranda, <a href=""><i>Using embeddings to infer diagnostics from medical prescriptions</i></a>, IST, 2024 (<i>co-supervised with Dra. Lilia Perfeito</i>)</li> <!-- 18 valores -->
@@ -1189,10 +1189,11 @@
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
+						<a href="NOVA-MAGALHAES">Afonso Simplício</a> |
 						<a href="MEEC-DAVID">João Gomes</a> |
 						<a href="MEEC-VASCONCELOS">João Nunes</a> |
 						<a href="MEIC-SOFIA">Diogo Ravasco</a> |
-						<a href="NOVA-ANDRE">Rodrigo Gonçalves</a> |
+						<a href="NOVA-LAMURIAS">Rodrigo Gonçalves</a> |
 						
 						<a href="MECD-ALIPIO">Alexandre Ferreira</a> | 
 						<a href="MEEC-JARDIM-NUNES">Rudolfo Félix</a> | 
