--- a/index.html
+++ b/index.html
@@ -371,8 +371,10 @@
 			<h3>Conference and Workshop Papers</h3>
 
 			<ul>
-<li>Piotr Gramacki, Bruno Martins, and Piotr Szymański, <i>Evaluation of Code LLMs on Geo-Spatial Code Generation</i>, Proceedings of the International ACM SIGSPATIAL Workshop on AI for Geographic Knowledge Discovery, 2024 [<a href="">PDF</a>]</li>
-<li>João Daniel Silva, João Magalhães, Devis Tuia, and Bruno Martins, <i>Multilingual Vision-Language Pre-training for the Remote Sensing Domain</i>, Proceedings of the ACM SIGSPATIAL International Conference on Advances in Geographic Information Systems, 2024 [<a href="">PDF</a>]</li>				
+<!-- <li>Gonçalo Gomes, Chrysoula Zerva, and Bruno Martins, <i>Multilingual evaluation of image captioning: How far can we get with CLIP models?</i>, Proceedings of the Annual Conference of the Nations of the Americas Chapter of the Association for Computational Linguistics, 2025 [<a href="">PDF</a>]</li> -->
+<li>Miguel Carvalho and Bruno Martins, <i>Efficient Architectures for High Resolution Vision-Language Models</i>, Proceedings of the International Conference on Computational Linguistics, 2025 [<a href="">PDF</a>]</li>				
+<li>Piotr Gramacki, Bruno Martins, and Piotr Szymański, <i>Evaluation of Code LLMs on Geo-Spatial Code Generation</i>, Proceedings of the International ACM SIGSPATIAL Workshop on AI for Geographic Knowledge Discovery, 2024 [<a href="https://arxiv.org/abs/2410.04617">PDF</a>]</li>
+<li>João Daniel Silva, João Magalhães, Devis Tuia, and Bruno Martins, <i>Multilingual Vision-Language Pre-training for the Remote Sensing Domain</i>, Proceedings of the ACM SIGSPATIAL International Conference on Advances in Geographic Information Systems, 2024 [<a href="https://arxiv.org/abs/2410.23370">PDF</a>]</li>				
 <li>João Coelho, Bruno Martins, Joao Magalhães, Jamie Callan, and Chenyan Xiong, <i>Dwell in the Beginning: How Language Models Embed Long Documents for Dense Retrieval</i>, Proceedings of the Annual Meeting of the Association for Computational Linguistics, 2024 [<a href="https://arxiv.org/abs/2404.04163">PDF</a>]</li>
 <li>Artur Guimarães, Bruno Martins, and João Magalhães, <i>Lisbon Computational Linguists at SemEval-2024 Task 2: Using A Mistral-7B Model and Data Augmentation</i>, Proceedings of the International Workshop on Semantic Evaluation, 2024 [<a href="https://arxiv.org/abs/2408.03127">PDF</a>]</li>
 <li>Luís Borges, Rohan Jha, Jamie Callan, and Bruno Martins, <i>Generalizable Tip-of-the-Tongue Retrieval with LLM Re-ranking</i>, Proceedings of the International ACM SIGIR Conference on Research and Development in Information Retrieval, 2024 [<a href="https://doi.org/10.1145/3626772.3657917">PDF</a>]</li>
@@ -633,6 +635,8 @@
 			<li>Helder Dias, <i>Vision and language LLMs for document form understanding</i>, IST (<i>ongoing co-supervision with Prof. Arlindo Oliveira</i>)</li>
 			<li>Piotr Gramacki, <i>Geospatial Language Models</i>, IST (<i>ongoing co-supervision with Prof. Piotr Szymański</i>)</li>
 			<li>Francisco Guedes, <i>Knowledge Representation Across Humans and Machines</i>, IST (<i>ongoing co-supervision with Prof. Arlindo Oliveira and Prof. Leila Wehbe</i>)</li>
+			<li>Nuno Machado, <i>Vision-and-Language Expert Models for 360-Degree Imagery</i>, IST </li>
+			<li>Afonso Certo, <i>End-to-End Robot Task Planning from Voice Commands</i>, IST (<i>ongoing co-supervision with Prof. Pedro Lima</i>)</li>
 			</ul>
 			<h3>MSc Students</h3>
 			<ul>
@@ -793,11 +797,11 @@
 			
 			<li>Leonor Barreiros, <a href=""><i>Semi-Supervised Medical Entity Linking</i></a>, IST, 2024 (<i>co-supervised with Dr. Gonçalo Correia</i>)</li> <!-- 19 valores -->
 			<li>Diogo Branco, <a href=""><i>Adapting large language models for the domain of clinical trials</i></a>, IST, 2024 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- 17 valores -->
-			<li>Catarina Valério, <a href=""><i>Using Large Language Models to Summarize Patient-Physician Dialogues into Medical Notes</i></a>, IST, 2024 (<i>co-supervised with Dr. Gonçalo Correia</i>)</li> <!-- 19 valores -->
+			<li>Catarina Valério, <a href=""><i>Using Large Language Models to Summarize Patient-Physician Dialogues into Medical Notes</i></a>, IST, 2024 (<i>co-supervised with Dr. Gonçalo Correia</i>)</li> <!-- 18 valores -->
 			<li>Guilherme Lopes, <a href=""><i>Efficient training of vision and language encoder models</i></a>, IST, 2024 (<i>co-supervised with Prof. Conceição Amado</i>)</li> <!-- 18 valores -->
-			<li>Afonso Certo, <a href=""><i>End-to-End Robot Task Planning from Voice Commands</i></a>, IST, 2024 (<i>co-supervised with Dr. Carlos Azevedo and Prof. Pedro U. Lima</i>)</li> <!-- 18 valores -->				
-			<li>Tiago Miranda, <a href=""><i>Using embeddings to infer diagnostics from medical prescriptions</i></a>, IST, 2024 (<i>co-supervised with Dra. Lilia Perfeito</i>)</li> <!-- 18 valores -->
-			<li>Nuno Machado, <a href=""><i>Optimizing Prompts for Large Language Models Using Evolutionary Algorithms</i></a>, IST, 2024 (<i>co-supervised with Prof. Joao Paulo Carvalho</i>)</li> <!-- 18 valores -->
+			<li>Afonso Certo, <a href=""><i>End-to-End Robot Task Planning from Voice Commands</i></a>, IST, 2024 (<i>co-supervised with Dr. Carlos Azevedo and Prof. Pedro U. Lima</i>)</li> <!-- 19 valores -->				
+			<li>Tiago Miranda, <a href=""><i>Using embeddings to infer diagnostics from medical prescriptions</i></a>, IST, 2024 (<i>co-supervised with Dra. Joana Gonçalves-Sá</i>)</li> <!-- 18 valores -->
+			<li>Nuno Machado, <a href=""><i>Optimizing Prompts for Large Language Models Using Evolutionary Algorithms</i></a>, IST, 2024 (<i>co-supervised with Prof. Joao Paulo Carvalho</i>)</li> <!-- 19 valores -->
 
 			<li>Inês Mota, <a href=""><i>Using Large Language Models to Compose Discharge Summaries from Clinical Notes</i></a>, IST, 2024 (<i>co-supervised with Dr. Gonçalo Correia</i>)</li> <!-- 18 valores -->				
 			<li>André Alves, <a href=""><i>Assessing the Uncertainty of Large Language Models</i></a>, IST, 2024 (<i>co-supervised with Dr. José Vieira</i>)</li> <!-- ?? valores -->
@@ -824,8 +828,9 @@
 					<td>
 					<ul><li>
 						<strong>Member of organization committees: </strong>
+						<a href="http://lxmls.it.pt/">LxMLS'25</a> |
 						<a href="https://geoai.ornl.gov/acmsigspatial-geoai/">GeoAI'24</a> |
-						<a href="http://lxmls.it.pt/">LxMLS'24</a> |
+						<a href="http://lxmls.it.pt/2024/">LxMLS'24</a> |
 						<a href="https://sigspatial2023.sigspatial.org">SIGSPATIAL'23</a>
 						<a href="https://ludovicmoncla.github.io/sigspatial-geohumanities-2023/">SIGSPATIAL GeoHumanities'23</a> |
 						<a href="https://geoai.ornl.gov/acmsigspatial-geoai/2023-main/">GeoAI'23</a> |
