--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
 			<li>Piotr Gramacki, <i>Geospatial Language Models</i>, IST (<i>ongoing co-supervision with Prof. Piotr Szymański</i>)</li>
 			<li>Francisco Guedes, <i>Knowledge Representation Across Humans and Machines</i>, IST (<i>ongoing co-supervision with Prof. Arlindo Oliveira and Prof. Leila Wehbe</i>)</li>
 			<li>Nuno Machado, <i>Vision-and-Language Expert Models for 360-Degree Imagery</i>, IST </li>
-			<li>Afonso Certo, <i>End-to-End Robot Task Planning from Voice Commands</i>, IST (<i>ongoing co-supervision with Prof. Pedro Lima</i>)</li>
+			<li>Afonso Certo, <i>End-to-End Robot Task Planning from Voice Commands</i>, IST (<i>ongoing co-supervision with Prof. Pedro U. Lima</i>)</li>
 			</ul>
 			<h3>MSc Students</h3>
 			<ul>
