--- a/index.html
+++ b/index.html
@@ -812,7 +812,9 @@
 			<li>Luís Lopes, <a href=""><i>Open-Vocabulary Semantic Segmentation of Aerial Photos</i></a>, IST, 2025 (<i>co-supervised with Prof. Alexandre Bernardino</i>)</li> <!-- ?? valores -->
 			<li>João Cardoso, <a href=""><i>Characterization of the Internal Representations of Multi-Modal Large Language Models</i></a>, IST, 2025 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- ?? valores -->
 			<li>Rui Alves da Fonseca, <a href=""><i>Training-Free Multilingual Image Captioning</i></a>, IST, 2025 (<i>co-supervised with Dr. Gil Rocha</i>)</li> <!-- ?? valores -->
-			<li>Pedro Claro, <a href=""><i>Vision-and-Language Expert Models for 360-Degree Imagery</i></a>, IST, 2025 <!-- ?? valores -->				
+			<li>Pedro Claro, <a href=""><i>Vision-and-Language Expert Models for 360-Degree Imagery</i></a>, IST, 2025 <!-- ?? valores -->
+
+			<!-- <li>Carlos Rebelo, <a href=""><i>Training-Free Captioning of Remote Sensing Aerial Imagery</i></a>, IST, 2025 --> <!-- ?? valores -->
 			</ul>
 		</td>
     </tr>
@@ -881,7 +883,8 @@
 				<tr>
 					<td>
 					<ul><li>
-						<strong>Member of programe committees and reviewer: </strong>						
+						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://giscience2025.org">GIScience'25</a> |						
 						<a href="https://dhnb.eu/conferences/dhnb2025/">DHNB'25</a> |						
 						<a href="https://geo-ext.github.io/GeoExT2025/">GeoExT'25</a> |
 						<a href="https://text2story25.inesctec.pt">Text2Story'25</a> |						
