--- a/index.html
+++ b/index.html
@@ -814,7 +814,8 @@
 			<li>Rui Alves da Fonseca, <a href=""><i>Training-Free Multilingual Image Captioning</i></a>, IST, 2025 (<i>co-supervised with Dr. Gil Rocha</i>)</li> <!-- ?? valores -->
 			<li>Pedro Claro, <a href=""><i>Vision-and-Language Expert Models for 360-Degree Imagery</i></a>, IST, 2025 <!-- ?? valores -->
 
-			<!-- <li>Carlos Rebelo, <a href=""><i>Training-Free Captioning of Remote Sensing Aerial Imagery</i></a>, IST, 2025 --> <!-- ?? valores -->
+			<li>Carlos Rebelo, <a href=""><i>Training-Free Captioning of Remote Sensing Aerial Imagery</i></a>, IST, 2025 <!-- ?? valores -->
+			<!-- <li>Leonor Azevedo, <a href=""><i>Composed Image Retrieval with Multilingual Queries for Remote Sensing Aerial Imagery</i></a>, IST, 2025 --> <!-- ?? valores -->
 			</ul>
 		</td>
     </tr>
