--- a/index.html
+++ b/index.html
@@ -371,7 +371,8 @@
 			<h3>Conference and Workshop Papers</h3>
 
 			<ul>
-<!-- <li>Gonçalo Gomes, Chrysoula Zerva, and Bruno Martins, <i>Multilingual evaluation of image captioning: How far can we get with CLIP models?</i>, Proceedings of the Annual Conference of the Nations of the Americas Chapter of the Association for Computational Linguistics, 2025 [<a href="">PDF</a>]</li> -->
+<!-- <li>Gonçalo Gomes, Chrysoula Zerva, and Bruno Martins, <i>Multilingual Evaluation of Image Captioning: How far can we get with CLIP models?</i>, Proceedings of the Annual Conference of the Nations of the Americas Chapter of the Association for Computational Linguistics, 2025 [<a href="">PDF</a>]</li> -->
+<li>Artur Guimarães, Bruno Martins, and João Magalhães, <i>A Reproducibility Study on Consistent LLM Reasoning for Natural Language Inference over Clinical Trials</i>, Proceedings of the European Conference on Information Retrieval, 2025 [<a href="">PDF</a>]</li>
 <li>Miguel Carvalho and Bruno Martins, <i>Efficient Architectures for High Resolution Vision-Language Models</i>, Proceedings of the International Conference on Computational Linguistics, 2025 [<a href="">PDF</a>]</li>				
 <li>Piotr Gramacki, Bruno Martins, and Piotr Szymański, <i>Evaluation of Code LLMs on Geo-Spatial Code Generation</i>, Proceedings of the International ACM SIGSPATIAL Workshop on AI for Geographic Knowledge Discovery, 2024 [<a href="https://arxiv.org/abs/2410.04617">PDF</a>]</li>
 <li>João Daniel Silva, João Magalhães, Devis Tuia, and Bruno Martins, <i>Multilingual Vision-Language Pre-training for the Remote Sensing Domain</i>, Proceedings of the ACM SIGSPATIAL International Conference on Advances in Geographic Information Systems, 2024 [<a href="https://arxiv.org/abs/2410.23370">PDF</a>]</li>				
