--- a/index.html
+++ b/index.html
@@ -886,6 +886,8 @@
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+					        <a href="https://2025.ijcai.org/call-for-papers-ai4tech-ai-enabling-critical-technologies/">IJCAI'25</a> |
+						<a href="https://xaiworldconference.com/2025/">XAI'25</a> |
 					        <a href="https://sigir2025.dei.unipd.it">SIGIR'25</a> |
 						<a href="https://tpdl2025.github.io">TPDL'25</a> |						
 						<a href="https://giscience2025.org">GIScience'25</a> |						
