--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
 			<li>Pedro Claro, <a href=""><i>Vision-and-Language Expert Models for 360-Degree Imagery</i></a>, IST, 2025 <!-- ?? valores -->
 
 			<li>Carlos Rebelo, <a href=""><i>Training-Free Captioning of Remote Sensing Aerial Imagery</i></a>, IST, 2025 <!-- ?? valores -->
-			<!-- <li>Leonor Azevedo, <a href=""><i>Composed Image Retrieval with Multilingual Queries for Remote Sensing Aerial Imagery</i></a>, IST, 2025 --> <!-- ?? valores -->
+			<li>Ricardo Almeida, <a href=""><i>Deep Learning Approaches to Detect Digital Image Forgery</i></a>, IST, 2025 (<i>co-supervised with Prof. Arlindo Oliveira</i>) <!-- ?? valores -->
 			</ul>
 		</td>
     </tr>
