--- a/index.html
+++ b/index.html
@@ -817,6 +817,7 @@
 
 			<li>Carlos Rebelo, <a href=""><i>Training-Free Captioning of Remote Sensing Aerial Imagery</i></a>, IST, 2025 <!-- ?? valores -->
 			<li>Ricardo Almeida, <a href=""><i>Deep Learning Approaches to Detect Digital Image Forgery</i></a>, IST, 2025 (<i>co-supervised with Prof. Arlindo Oliveira</i>) <!-- ?? valores -->
+			<li>Miguel Rebocho, <a href=""><i>Open-ended Named Entity Recognition</i></a>, IST, 2025 (<i>co-supervised with Dr. Miguel Freire</i>) <!-- ?? valores -->
 			</ul>
 		</td>
     </tr>
