--- a/index.html
+++ b/index.html
@@ -223,10 +223,11 @@
 	</tr>
     	<tr>
 		<td>
+			2024/2025 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/EITT36/2024-2025/2-semestre">Entrepreneurship, Innovation and Technology Transfer</a> (IST,MEEC)<br/>
 			2024/2025 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/PF36/2024-2025/2-semestre">Spoken Language Processing</a> (IST,MEEC,MEIC,MECD)<br/>
-			2024/2025 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/Pro336/2024-2025/2-semestre">Programming</a> (IST,LEEC,LEAer)<br/>
+			2024/2025 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/Pro336/2024-2025/2-semestre">Programming</a> (IST,LEEC)<br/>
 			2023/2024 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/PF3/2023-2024/2-semestre">Spoken Language Processing</a> (IST,MEEC,MEIC,MECD)<br/>
-			2023/2024 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/Pro33/2023-2024/2-semestre">Programming</a> (IST,LEEC,LEAer)<br/>
+			2023/2024 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/Pro33/2023-2024/2-semestre">Programming</a> (IST,LEAer)<br/>
 			2023/2024 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/AAut-4/2023-2024/1-semestre">Machine Learning</a> (IST,MEEC)<br/>
 			2022/2023 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/PF/2022-2023/2-semestre">Spoken Language Processing</a> (IST,MEEC,MEIC,MECD)<br/>
 			2022/2023 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/AAut-4/2022-2023/1-semestre">Machine Learning</a> (IST,MEEC)<br/>
@@ -371,6 +372,7 @@
 			<h3>Conference and Workshop Papers</h3>
 
 			<ul>
+<li>João Daniel Silva, João Magalhães, Devis Tuia, and Bruno Martins, <i>Large Language Models for Captioning and Retrieving Remote Sensing Images</i>, Proceedings of the ICLR Workshop on Machine Learning for Remote Sensing, 2025 [<a href="">PDF</a>]</li>
 <li>Gonçalo Gomes, Chrysoula Zerva, and Bruno Martins, <i>Evaluation of Multilingual Image Captioning: How far can we get with CLIP models?</i>, Findings of the Annual Conference of the Nations of the Americas Chapter of the Association for Computational Linguistics, 2025 [<a href="">PDF</a>]</li>
 <li>Artur Guimarães, Bruno Martins, and João Magalhães, <i>A Reproducibility Study on Consistent LLM Reasoning for Natural Language Inference over Clinical Trials</i>, Proceedings of the European Conference on Information Retrieval, 2025 [<a href="">PDF</a>]</li>
 <li>Miguel Carvalho and Bruno Martins, <i>Efficient Architectures for High Resolution Vision-Language Models</i>, Proceedings of the International Conference on Computational Linguistics, 2025 [<a href="https://aclanthology.org/2025.coling-main.700/">PDF</a>]</li>				
