--- a/index.html
+++ b/index.html
@@ -372,6 +372,7 @@
 			<h3>Conference and Workshop Papers</h3>
 
 			<ul>
+<li>Leonor Barreiros, Isabel Coutinho, Gonçalo M. Correia, and Bruno Martins, <i>Explainable ICD Coding via Entity Linking</i>, Proceedings of the NAACL Workshop on Patient-Oriented Language Processing, 2025 [<a href="">PDF</a>]</li>
 <li>João Daniel Silva, João Magalhães, Devis Tuia, and Bruno Martins, <i>Large Language Models for Captioning and Retrieving Remote Sensing Images</i>, Proceedings of the ICLR Workshop on Machine Learning for Remote Sensing, 2025 [<a href="">PDF</a>]</li>
 <li>Gonçalo Gomes, Chrysoula Zerva, and Bruno Martins, <i>Evaluation of Multilingual Image Captioning: How far can we get with CLIP models?</i>, Findings of the Annual Conference of the Nations of the Americas Chapter of the Association for Computational Linguistics, 2025 [<a href="">PDF</a>]</li>
 <li>Artur Guimarães, Bruno Martins, and João Magalhães, <i>A Reproducibility Study on Consistent LLM Reasoning for Natural Language Inference over Clinical Trials</i>, Proceedings of the European Conference on Information Retrieval, 2025 [<a href="">PDF</a>]</li>
