--- a/index.html
+++ b/index.html
@@ -639,7 +639,6 @@
 			<li>Helder Dias, <i>Vision and language LLMs for document form understanding</i>, IST (<i>ongoing co-supervision with Prof. Arlindo Oliveira</i>)</li>
 			<li>Piotr Gramacki, <i>Geospatial Language Models</i>, IST (<i>ongoing co-supervision with Prof. Piotr Szymański</i>)</li>
 			<li>Francisco Guedes, <i>Knowledge Representation Across Humans and Machines</i>, IST (<i>ongoing co-supervision with Prof. Arlindo Oliveira and Prof. Leila Wehbe</i>)</li>
-			<li>Nuno Machado, <i>Vision-and-Language Expert Models for 360-Degree Imagery</i>, IST </li>
 			<li>Afonso Certo, <i>End-to-End Robot Task Planning from Voice Commands</i>, IST (<i>ongoing co-supervision with Prof. Pedro U. Lima</i>)</li>
 			</ul>
 			<h3>MSc Students</h3>
@@ -1162,12 +1161,14 @@
 					<ul><li>						
 						<strong>Ph.D. evaluation comittees: </strong>
 						<a href="https://www.linkedin.com/in/richard-jonker-8736131b9">Richard Jonker</a> |
-						<a href="http://web.tecnico.ulisboa.pt/soraiafpaulo/">Soraia Paulo</a> |
-						<a href="https://www.cienciavitae.pt/261E-CB39-416C">John Mendonça</a> |
-						<a href="https://web.ist.utl.pt/maria.casimiro/">Maria Casimiro</a> |						
-						<a href="https://nunonmg.github.io/">Nuno Guerreiro</a> |
 						<a href="https://orcid.org/0000-0002-0362-6100">Herbert Pinto</a> |
-						<a href="https://www.linkedin.com/in/afonso-salgado-sousa/?originalSubdomain=pt">Afonso Sousa</a> |
+						<a href="https://scholar.google.co.uk/citations?user=kDNpYKEAAAAJ">Afonso Sousa</a> |						
+						<a href="https://www.cienciavitae.pt/261E-CB39-416C">John Mendonça</a> |						
+
+						<a href="https://www.linkedin.com/in/gabrieljesus/">Gabriel de Jesus</a> |						
+						<a href="http://web.tecnico.ulisboa.pt/soraiafpaulo/">Soraia Paulo</a> |						
+						<a href="https://nunonmg.github.io/">Nuno Guerreiro</a> |
+						<a href="https://web.ist.utl.pt/maria.casimiro/">Maria Casimiro</a> |
 						<a href="https://www.linkedin.com/in/fernandoblalves/">Fernando Alves</a> |
 						<a href="https://www.linkedin.com/in/syed-mehtab-alam-b4564a30/">Mehtab Alam Syed</a> |
 						<a href="https://scholar.google.com/citations?user=dEdhfOQAAAAJ">Daniel Garcia-Gonzalez</a> |
